# sinhala-phonetic-ime

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci-ubuntu.yml  ci-windows.yml
docs/: architecture.md  phase-3-tsf-handoff.md  phonetic-mapping-design.md
engine/: CMakeLists.txt
engine/include/sinhala_ime/: composition.h  engine.h  mapping.h  trie.h
engine/src/: composition.cpp  engine.cpp  mapping.cpp  trie.cpp
engine/tests/: CMakeLists.txt  golden.txt  test_composition.cpp  test_engine.cpp  test_mapping.cpp  test_trie.cpp
mapping/: phonetic-default.json
prototype/: transliterate.py
prototype/tests/: test_prototype.py  word_corpus.txt
tools/: generate_golden.py
tsf_stub/: ITextInputService.h  README.md
